# fourteen-screws

./: .gitmodules  Cargo.toml  README.md  build.rs
assets/sprites/LAB/: readme.txt
demo/: Cargo.toml
demo/src/: lib.rs  player.rs
demo/webapp/: demo-level.js  index.js  package-lock.json  package.json
engine/: .gitignore  Cargo.toml  README.md  build.rs
engine/src/: consts.rs  fp.rs  lib.rs  maths.rs  raycast.rs  render.rs  scene.rs  trig.rs  utils.rs
engine/src/collision/: mod.rs
engine/src/maths/: trig.rs
engine/src/render/: camera.rs  mod.rs  raycast.rs  renderer.rs
engine/src/scene/: mod.rs
engine/tests/resources/: test-scene-1.json
engine/webapp/: demo-level.js  index.html  index.js  package-lock.json  package.json
img2tex/: Cargo.toml  out.base64
img2tex/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
shared/: Cargo.toml
shared/src/: consts.rs  fp.rs  lib.rs
shared/src/consts/: display.rs  render.rs  trig.rs
src/: consts.rs  engine.rs  fp.rs  lib.rs  raycast.rs  trig.rs
tools/img2tex/: README.md
tools/img2tex/src/: main.rs
webapp/: index.html  index.js  package-lock.json  package.json
