[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3"
features = [
	"console",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
float-cmp = "0.9.0"

[dependencies]
wasm-bindgen = "0.2.86"
fourteen-screws = { path = "../engine" }
serde_json = "1.0.99"
