[package]
name = "fourteen-screws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3"
features = [
	"console",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
float-cmp = "0.9.0"

[dependencies]
base64 = "0.21.2"
serde_json = "1.0.99"
wasm-bindgen = "0.2.86"
shared = { path = "../shared" }
macros = { path = "../macros" }
num-traits = "0.2.15"
